# the_tuul

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  gunicorn.conf.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vite.config.common.ts  vite.config.dev.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts  webpack.common.js
.github/workflows/: docker-build-push.yml
api/: app_logging.py  main.py  separator_socket_app.py  settings.py  urls.py  views.py
api/helpers/: cloud_storage.py  youtube_helper.py
api/karaoke/: music_separation.py
frontend/: App.vue  constants.ts  index.html  index.ts
frontend/components/: FileUpload.spec.ts  FileUpload.vue  HelpTab.vue  LyricEditor.vue  LyricInputTab.vue  SmoothAudioPlayer.vue  SongInfoTab.vue  SongTimingTab.vue  SourceFileDownloadLinks.vue  SubmitTab.vue  SubtitleDisplay.spec.ts  SubtitleDisplay.vue  TimingAdjuster.vue  TimingAdjustmentTab.vue  TimingButtons.vue  VideoPreview.spec.ts  VideoPreview.vue  Wavesurfer.vue  WavesurferDevHarness.vue
frontend/lib/: TimingsList.spec.ts  TimingsList.ts  adjustments.spec.ts  adjustments.ts  audio.spec.ts  audio.ts  timing.spec.ts  timing.ts  util.ts  video.spec.ts  video.ts
frontend/lib/wavesurferPlugins/: OpenEndedRegionPlugin.ts
frontend/plugins/: fontawesome.ts
frontend/stores/: lyrics.spec.ts  lyrics.ts  media.ts  musicSeparation.ts  settings.ts  timings.spec.ts  timings.ts
frontend/types/: jsmediatags.d.ts  vite-env.d.ts
scripts/: createSong.ts
tests/: conftest.py  utils
tests/api/: download_youtube_video_test.py  music_separation_test.py  separate_track_test.py  test_cloud_storage.py  test_separate_track_caching.py
tests/api/helpers/: youtube_helper_test.py
tests/e2e/: lyrics-tab-functionality.spec.ts  multi-screen-timing.spec.ts  timings-file-upload.spec.ts  video-creation.spec.ts  youtube-video-creation.spec.ts
tests/e2e/utils/: apiMocks.ts  assertions.ts  index.ts  inputs.ts  navigation.ts  setupHelpers.ts  timings.ts
tests/fixtures/youtube/: audio  metadata.json  video
