[tool.poetry]
name = "the_tuul"
version = "0.13.0"
description = "Create a good-enough karaoke track for any song in about 10 minutes"
authors = ["Dan Kurtz  <andfurthermore@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
Django = "^5.2"
djangorestframework = "^3.16.0"
gunicorn = "^23.0.0"
whitenoise = {extras = ["brotli"], version = "^6.9.0"}
audio-separator = {extras = ["cpu"], version = "^0.32.0"}
django-cors-headers = "^4.7.0"
django-structlog = "^9.1.1"
pytubefix = "^8.13.1"
django-vite = "^3.1.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests/api",
]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
