[tool.poetry]
name = "the_tuul"
version = "0.15.2"
description = "Create a good-enough karaoke track for any song in about 10 minutes"
authors = ["Dan Kurtz  <andfurthermore@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
audio-separator = {extras = ["cpu"], version = "^0.32.0"}
pytubefix = "^8.13.1"
google-cloud-storage = "^3.1.0"
fastapi = {extras = ["standard"], version = "^0.115.12"}
gunicorn = "^23.0.0"
structlog = "^25.4.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
mypy = "^1.15.0"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests/api",
]
pythonpath = [
  ".",
  "api"
]

[tool.mypy]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
